[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jrl-cmakemodules-scripts"
version = "1.2.0"
description = "Release scripting tools for JRL CMake modules"
readme = "v2/scripts/README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
dependencies = [
    "tomlkit>=0.11.0",
    "ruamel.yaml>=0.17.0",
    "rich>=12.0.0",
    "packaging>=21.0",
    "cmake-parser>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/jrl-umi3218/jrl-cmakemodules"

[project.scripts]
jrl-release = "jrl_release:main"

[tool.setuptools]
py-modules = ["jrl_release"]
package-dir = {"" = "v2/scripts"}
