[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jrl-cmakemodules-scripts"
version = "2.0.0"
description = "Release scripting tools for JRL CMake modules"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
dependencies = [
    "tomlkit>=0.11.0",
    "ruamel.yaml>=0.17.0",
    "rich>=12.0.0",
    "packaging>=21.0",
    "cmake-parser>=0.1.0",
]

[project.urls]
homepage = "https://github.com/jrl-umi3218/jrl-cmakemodules"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
jrl-release = "jrl_release:main"

[tool.setuptools]
py-modules = ["jrl_release"]
package-dir = {"" = "."}

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-v"

[tool.coverage.run]
source = ["jrl_release"]
